feat: add descriptive argument placeholder in tab completion